RE #81: - Fixed z-index for sidebar toggle button on mobile

--- a/src/components/screen/styles.scss
+++ b/src/components/screen/styles.scss
@@ -433,7 +433,8 @@ $sidenav-width:     300px;
 
     .screen-sidebar-is-open & {
       right: auto;
-      left: -20px;
+      left: -24px;
+      z-index: 4;
     }
   }
 
